[ci skip] Updates

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 			<div class="tsd-panel tsd-typography">
 				<h1 id="latlng-conv">latlng-conv</h1>
 				<p>Latitude and longitude coordinates converter.</p>
+				<p><a href="https://mingfeng.github.io/latlng-conv/">API Docs</a></p>
 			</div>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
