[ci skip] Updates

--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-interface">
+						<a href="interfaces/ddm.html" class="tsd-kind-icon">DDM</a>
+					</li>
+					<li class=" tsd-kind-interface">
 						<a href="interfaces/dms.html" class="tsd-kind-icon">DMS</a>
 					</li>
 					<li class=" tsd-kind-type-alias">
@@ -139,7 +142,13 @@
 						<a href="globals.html#second_precision_factor" class="tsd-kind-icon">SECOND_<wbr>PRECISION_<wbr>FACTOR</a>
 					</li>
 					<li class=" tsd-kind-function">
+						<a href="globals.html#dd2ddm" class="tsd-kind-icon">dd2ddm</a>
+					</li>
+					<li class=" tsd-kind-function">
 						<a href="globals.html#dd2dms" class="tsd-kind-icon">dd2dms</a>
+					</li>
+					<li class=" tsd-kind-function">
+						<a href="globals.html#ddm2dd" class="tsd-kind-icon">ddm2dd</a>
 					</li>
 					<li class=" tsd-kind-function">
 						<a href="globals.html#dms2dd" class="tsd-kind-icon">dms2dd</a>
