--- a/interfaces/ddm.html
+++ b/interfaces/ddm.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>DMS | latlng-conv</title>
+	<title>DDM | latlng-conv</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -56,10 +56,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="dms.html">DMS</a>
+					<a href="ddm.html">DDM</a>
 				</li>
 			</ul>
-			<h1>Interface DMS</h1>
+			<h1>Interface DDM</h1>
 		</div>
 	</div>
 </header>
@@ -70,7 +70,7 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">DMS</span>
+						<span class="target">DDM</span>
 					</li>
 				</ul>
 			</section>
@@ -81,10 +81,9 @@
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="dms.html#degrees" class="tsd-kind-icon">degrees</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="dms.html#direction" class="tsd-kind-icon">direction</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="dms.html#minutes" class="tsd-kind-icon">minutes</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="dms.html#seconds" class="tsd-kind-icon">seconds</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="ddm.html#degrees" class="tsd-kind-icon">degrees</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="ddm.html#direction" class="tsd-kind-icon">direction</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="ddm.html#minutes" class="tsd-kind-icon">minutes</a></li>
 							</ul>
 						</section>
 					</div>
@@ -98,7 +97,7 @@
 					<div class="tsd-signature tsd-kind-icon">degrees<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mingfeng/latlng-conv/blob/0801bd5/src/lib/types.ts#L4">lib/types.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/mingfeng/latlng-conv/blob/0801bd5/src/lib/types.ts#L11">lib/types.ts:11</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -108,7 +107,7 @@
 					<div class="tsd-signature tsd-kind-icon">direction<span class="tsd-signature-symbol">:</span> <a href="../globals.html#direction" class="tsd-signature-type">Direction</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mingfeng/latlng-conv/blob/0801bd5/src/lib/types.ts#L7">lib/types.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/mingfeng/latlng-conv/blob/0801bd5/src/lib/types.ts#L13">lib/types.ts:13</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -118,17 +117,7 @@
 					<div class="tsd-signature tsd-kind-icon">minutes<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mingfeng/latlng-conv/blob/0801bd5/src/lib/types.ts#L5">lib/types.ts:5</a></li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="seconds" class="tsd-anchor"></a>
-					<h3>seconds</h3>
-					<div class="tsd-signature tsd-kind-icon">seconds<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/mingfeng/latlng-conv/blob/0801bd5/src/lib/types.ts#L6">lib/types.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/mingfeng/latlng-conv/blob/0801bd5/src/lib/types.ts#L12">lib/types.ts:12</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -144,30 +133,27 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-interface">
-						<a href="ddm.html" class="tsd-kind-icon">DDM</a>
-					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface">
-						<a href="dms.html" class="tsd-kind-icon">DMS</a>
+						<a href="ddm.html" class="tsd-kind-icon">DDM</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="dms.html#degrees" class="tsd-kind-icon">degrees</a>
+								<a href="ddm.html#degrees" class="tsd-kind-icon">degrees</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="dms.html#direction" class="tsd-kind-icon">direction</a>
+								<a href="ddm.html#direction" class="tsd-kind-icon">direction</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="dms.html#minutes" class="tsd-kind-icon">minutes</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="dms.html#seconds" class="tsd-kind-icon">seconds</a>
+								<a href="ddm.html#minutes" class="tsd-kind-icon">minutes</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
+					<li class=" tsd-kind-interface">
+						<a href="dms.html" class="tsd-kind-icon">DMS</a>
+					</li>
 					<li class=" tsd-kind-type-alias">
 						<a href="../globals.html#dmscoordinates" class="tsd-kind-icon">DMSCoordinates</a>
 					</li>
